ViewsOverlay: fix content stretch

--- a/src/components/presentation/overlays/ViewsOverlay/ViewsOverlay.css
+++ b/src/components/presentation/overlays/ViewsOverlay/ViewsOverlay.css
@@ -19,6 +19,7 @@
 .ptr-overlay-views-content {
 	display: flex;
 	flex-direction: row;
+	flex-grow: 1;
 }
 
 /* Scopes list */
